# cpp_chat

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  client_app.cpp  main.cpp  server_app.cpp
include/gui/: qt_gui.hpp
include/libchat/: chat.hpp  client.hpp  server.hpp
include/libmain/: chat.hpp  client.hpp  hello_world.hpp  server.hpp
src/: CMakeLists.txt  chat.cpp  client.cpp  hello_world.cpp  server.cpp
