set(APP_NAME "${PROJECT_NAME}-app")

set(APP_MODULE_DIRECTORY "${PROJECT_SOURCE_DIR}/apps")
set(APP_SOURCE_DIRECTORY "${APP_MODULE_DIRECTORY}")

set(APP_SOURCES "${APP_SOURCE_DIRECTORY}/main.cpp")
FIND_PACKAGE(Boost 1.70 REQUIRED)
IF (BOOST_FOUND)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
ENDIF()
add_executable(${APP_NAME} ${APP_SOURCES})

target_link_libraries(${APP_NAME} ${LIBRARY_NAME})
